ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: global-app.com
      http:
        paths:
          - path: "/uid"
            pathType: Exact
            backend:
              service:
                name: uid-gen-service
                port:
                  number: 3000
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 5000
